# nix-analisa

./: Cargo.nix  Cargo.toml  README.md  flake.nix
scripts/: regenerate-cargo-nix.sh
src/: app.rs  layout.rs  main.rs  nix_data.rs  util.rs
src/app/: mod.rs  physics.rs  render_utils.rs
src/app/graph/: build.rs  interaction.rs  mod.rs  view.rs
src/app/highlight/: collect.rs  mod.rs  paths.rs
src/app/physics/: forces.rs  mod.rs  quadtree.rs
src/app/ui/: controls.rs  details.rs  fps.rs  mod.rs  panels.rs
src/nix/: collect.rs  graph.rs  mod.rs  nix_cmd.rs  parse.rs
