[package]
name = "nix-analisa"
version = "0.1.0"
edition = "2024"
description = "Visual analyzer for NixOS system closure size"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", default-features = false, features = ["derive", "std"] }
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
fuzzy-matcher = "0.3.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
